<resources>
    <string name="app_name">Blasti.net</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Blasti</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_calendier">Calendier</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_concerts">Concerts</string>
    <string name="contact">Contact</string>
    <string name="adresse_n_06_complexe_gammarth_hills_rue_hannibal">ADRESSE:   06 complexe gammarth Hills rue hannibal</string>
    <string name="t_l_phone_nt_l_phone_28_111_000_71_747_000">TÉLÉPHONE :  Téléphone: 28.111.000-71.747.000</string>
    <string name="contact_us">Contact Us</string>
    <string name="button">Button</string>
    <string name="calendier">Calendier</string>
    <string name="first_name">First Name</string>
    <string name="register_user">Register User</string>
    <string name="e_mail">E-MAIL</string>
    <string name="last_name">LAST NAME</string>
    <string name="register">Register</string>
    <string name="note_your_password_will_be_generated_automatically_and_sent_to_your_email_address">Note: Your password will be generated automatically and sent to your email address.</string>
    <string name="festival">festival</string>
    <string name="hello">hello</string>
    <string name="nom_de_evenement">nom de evenement</string>
    <string name="trouver_un_evenement">trouver un evenement</string>
    <string name="Sport">sport</string>
    <string name="r_servez_blastek_maintenant">Réservez ||BLASTEK|| Maintenant</string>
    <string name="string_r_servez_blastek_maintenant"/>
    <string name="cherche_un_evenement">cherche un evenement</string>
    <string name="chercher">Chercher</string>
    <string name="your_name">Your Name</string>
    <string name="your_e_mail">Your E-Mail</string>
    <string name="your_subject">Your Subject</string>
    <string name="your_message">Your Message</string>
    <string name="title_contact">TextView</string>
    <string name="title">TextView</string>
    <string name="feedbacktitle">login</string>
    <string name="feedbackname2">Name</string>
    <string name="feedbackemail">Mail</string>
    <string name="name">Name</string>
    <string name="register_user">Register User</string>
    <string name="e_mail">E-MAIL</string>
    <string name="first_name">First Name</string>
    <string name="last_nam">Last Name</string>
    <string name="register1">REGISTER</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in2">SiGN IN</string>

    <string-array name="spin1">
        <item>All Categories</item>
        <item>Business</item>
        <item> Concert</item>
        <item> Formation</item>
        <item> Arts </item>
        <item> Sport </item>
        <item> Theatre </item>
        <item> festival </item>

    </string-array>
    <string-array name="spin2">
        <item>Tout le Temps</item>
        <item>Aujourd-hui</item>
        <item>Demain</item>
        <item>Cette semaine</item>
        <item>SportCette fin de semaine </item>
        <item> prochaine semaine </item>
        <item>Le mois prochain</item>
        <item>Événements à venir</item>

    </string-array>

    <string-array name="array_theatre1">
        <item>All Categories</item>
        <item>Buisness</item>
        <item>Concert</item>
        <item>Formation</item>
        <item>Arts</item>
        <item>Sport</item>
        <item>Theatre</item>
        <item>Festival</item>
    </string-array>
    <string-array name="array_theatre2">
        <item>Tout le temps</item>
        <item>Aujourdhui</item>
        <item>Demain</item>
        <item>Cette semaine</item>
        <item>Cette fin de semain</item>
        <item>prochaine semaine</item>
        <item>Le mois prochain</item>
        <item>Evenements à venir</item>
    </string-array>


    <string-array name="years">
        <item>1991</item>
        <item>1991</item> <item>1992</item> <item>1993</item> <item>1994</item> <item>1995</item> <item>1996</item>
        <item>1997</item> <item>1998</item> <item>1999</item> <item>2000</item><item>2001</item><item>2002</item>
        <item>2003</item><item>2004</item><item>2005</item><item>2006</item><item>2007</item>
        <item>2008</item><item>2009</item><item>2010</item><item>2011</item><item>2012</item>
        <item>2013</item><item>2014</item><item>2015</item><item>2016</item><item>2017</item><item>2018</item><item>2019</item><item>2020</item>
    </string-array>
    <string-array name="months">
       <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="days">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>
</resources>


